Issue GRUND-44: Fixed issues with content-boxes text color and spacing

--- a/scss/modules/_content-boxes.scss
+++ b/scss/modules/_content-boxes.scss
@@ -58,6 +58,8 @@
   }
 
   &--content {
+    color: $black;
+
     &.has-spacing {
       padding-bottom: $layout-spacing-medium;
       padding-left: $layout-spacing-medium;
